@@ -20,11 +20,25 @@
 /*                                SEMI PRIMES                                 */
 /******************************************************************************/
 
+#if 0
 static const unsigned char _semiprimelist[] =
   {0,4,6,9,10,14,15,21,22,25,26,33,34,35,38,39,46,49,51,55,57,58,62,65,69,74,
    77,82,85,86,87,91,93,94,95,106,111,115,118,119,121,122,123,129,133,134,141,
    142,143,145,146,155,158,159,161,166,169,177,178,183,185,187,194,201,202,
    203,205,206,209,213,214,215,217,218,219,221,226,235,237,247,249,253,254};
+#else
+static const unsigned short _semiprimelist[] =
+  {0,4,6,9,10,14,15,21,22,25,26,33,34,35,38,39,46,49,51,55,57,58,62,65,69,74,
+   77,82,85,86,87,91,93,94,95,106,111,115,118,119,121,122,123,129,133,134,141,
+   142,143,145,146,155,158,159,161,166,169,177,178,183,185,187,194,201,202,
+   203,205,206,209,213,214,215,217,218,219,221,226,235,237,247,249,253,254,
+   259,262,265,267,274,278,287,289,291,295,298,299,301,302,303,305,309,314,
+   319,321,323,326,327,329,334,335,339,341,346,355,358,361,362,365,371,377,
+   381,382,386,391,393,394,395,398,403,407,411,413,415,417,422,427,437,445,
+   446,447,451,453,454,458,466,469,471,473,478,481,482,485,489,493,497,501,
+   502,505,511,514,515,517,519,526,527,529,533,535,537,538,542,543,545,551,
+   553,554,559,562,565,566,573,579,581,583,586,589,591,597,611,614,622,623};
+#endif
 #define NSEMIPRIMELIST (sizeof(_semiprimelist)/sizeof(_semiprimelist[0]))
 
 #if 1
@@ -90,7 +104,7 @@ static UV _semiprime_count(UV n)
 }
 #else
 
-/* This is much cleaner, but ends up being slower. */
+/* This is much cleaner, but ends up being a little slower. */
 
 #include "prime_count_cache.h"
 #define CACHED_PC(cache,n) prime_count_cache_lookup(cache,n)
@@ -273,39 +287,103 @@ UV semiprime_count(UV lo, UV hi)
   return _semiprime_count(hi) - _semiprime_count(lo-1);
 }
 
-static UV _cb_nsa(UV mid, UV k) { return nth_semiprime_approx(mid); }
+static UV _cb_sca(UV mid, UV k) { return semiprime_count_approx(mid); }
 
 UV semiprime_count_approx(UV n) {
+  UV i;
+
   if (n <= _semiprimelist[NSEMIPRIMELIST-1]) {
-    UV i = 0;
-    while (i < NSEMIPRIMELIST-1 && n >=  _semiprimelist[i+1])
-      i++;
+
+    for (i = 0;  i < NSEMIPRIMELIST-1 && n >= _semiprimelist[i+1];  i++)
+      ;
     return i;
+
   } else {
-    UV lo, hi;
-    double init, logn = log(n), loglogn = log(logn);
-    /* init = n * loglogn / logn; */
-    /* init = n * (loglogn + 0.302) / logn; */
-    init = (n/logn) * (0.11147910114 + 0.00223801350*logn + 0.44233207922*loglogn + 1.65236647896*log(loglogn));
-    lo = 0.97 * init - 5;
-    hi = 1.03 * init;
-    return inverse_interpolate(lo, hi, n, 0, &_cb_nsa, 0);
+
+    /* Crisan and Erban (2020)  https://arxiv.org/abs/2006.16491 */
+    UV L, res;
+    double logn = log(n), loglogn = log(logn);
+    double series = 0, den = 1, mc;
+    static const double C[19] = {
+         0.26149721284764278375L,
+        -2.0710850628855780875L,
+        -7.6972777412176108802L,
+        -35.345660320564161516L,
+        -206.71503925406509339L,
+        -1511.1997871316530251L,
+        -13546.323682845914021L,
+        -146229.10675883565523L,
+        -1867579.6280076650637L,
+        -27733045.258413542557L,
+        -470983423.57703294361L,
+ /*
+  * Values for C_11+ are not exact, but that's ok here.
+  * \p 80
+  * zetald(n) = { zeta'(n) / zeta(n) }
+  * zetalim(n) = { derivnum(s = 1-1e-40, zetald(s) + 1/(s-1), n-1) }
+  * B(n,x=100) = { if(n==0,return(0.2614972128476427837554268386086958590516)); (-1)^n * (sum(i=2, x, moebius(i) * i^(n-1) * derivnum(X=i,zetald(X),n-1)) + zetalim(n)) }
+  * BN = vector(20,n,B(n-1,500));
+  * C(n) = { n!*(sum(i=0,n,BN[i+1]/i!) - sum(i=1,n,1/i)) }
+  */
+        -9011500984.0L,
+        -191744069149.0L,
+        -4487573459711.0L,
+        -114472069580580.0L,
+        -3158610502077136.0L,
+        -93682567786528912.0L,
+        -2970838770257639696.0L,
+        -100274471240063911725.0L };   /* ~ C_18 */
+    static const double CROSS[16] =
+     {     632, 9385, 136411, 4610076, 66358000, 440590000, 2557200000, 53032001000.0, 1151076796431.0, 20416501389724.0, 165815501587300.0, 2316269995165180.0, 12857302245660782.0, 82444629251749248.0, 516965078559580064.0, 1875312882821895168.0 };
+     /*                                                          ^^ last value is not right */
+    static const double mincount[17] =
+     { 82, 195, 2485,  31446,  906319, 11741185,  72840337,  398702652,    7538564737,  150382042176.0,  2482510001499.0,  19204997230933.0,  253305676016061.0,  1357320342479135.0,  8390553919247938.0,  50820734885440616.0,  180076215506140384.0 };
+
+    /* Pick truncation point */
+    for (L = 3; L <= 18 && (double)n >= CROSS[L-3]; L++)  ;
+    /* TODO: Tune crossover for 18 */
+
+    /* Calculate truncated asymptotic value */
+    for (i = 1; i <= L; i++) {
+      series += factorial(i-1) * (loglogn / den);
+      series += C[i-1] / den;
+      den *= logn;
+    }
+    res = (UV) ( (n / logn) * series + 0.5L );
+
+    /* Check for overflow */
+    if (res >= MPU_MAX_SEMI_PRIME_IDX)  return MPU_MAX_SEMI_PRIME_IDX;
+
+    /* Ensure monotonic using simple clamping */
+    mc = mincount[L-3];
+    /* mc = (L == 3) ? 82 : semiprime_count_approx(CROSS[L-4]-1); */
+    if ((double)res < mc)  return mc;
+
+    return res;
+
   }
 }
 
 UV nth_semiprime_approx(UV n) {
   double logn,log2n,log3n,log4n, err_lo, err_md, err_hi, err_factor, est;
+  UV lo, hi;
 
   if (n < NSEMIPRIMELIST)
     return _semiprimelist[n];
+  if (n > MPU_MAX_SEMI_PRIME_IDX)
+    return 0;
 
-  /* Piecewise with blending.  Hacky and maybe overkill, but it makes
-   * a big performance difference, especially at the high end.
+  /* Piecewise with blending.  Hacky and maybe overkill.  It makes a good
+   * estimator by itself, but our count approximation is even better, so we
+   * use this as an excellent initial estimate, then use inverse binary
+   * search to lower the error another order of magnitude.
+   *
    *     Interp Range    Crossover to next
    * lo   2^8  - 2^28      2^26 - 2^27
    * md   2^25 - 2^48      2^46 - 2^47
    * hi   2^45 - 2^64
    */
+
   logn = log(n);   log2n = log(logn);   log3n = log(log2n);   log4n=log(log3n);
   err_lo = 1.000 - 0.00018216088*logn + 0.18099609886*log2n - 0.51962474356*log3n - 0.01136143381*log4n;
   err_md = 0.968 - 0.00073297945*logn + 0.09731690314*log2n - 0.25212500749*log3n - 0.01366795346*log4n;
@@ -324,9 +402,13 @@ UV nth_semiprime_approx(UV n) {
   } else {
     err_factor = err_hi;
   }
-  est = 0.5 + err_factor * n * logn / log2n;
-  if (est >= UV_MAX) return 0;
-  return (UV)est;
+  est = err_factor * n * logn / log2n;
+  if (est >= MPU_MAX_SEMI_PRIME) return MPU_MAX_SEMI_PRIME;
+
+  /* Use inverse interpolation to improve the result. */
+  lo = 0.98 * est - 5;
+  hi = 1.02 * est;
+  return inverse_interpolate(lo, hi, n, 0, &_cb_sca, 0);
 }
 
 static UV _next_semiprime(UV n) {
