@@ -157,6 +157,8 @@ Revision history for Perl module Math::Prime::Util
     - Error message "must be a positive integer" changed to
       "must be a non-negative integer" when zero is allowed.
 
+    - More accurate semiprime_count_approx and nth_semiprime_approx.
+
     [OTHER]
 
     - Legendre, Meissel, and Lehmer prime counting got rewritten to use our
